# SystemMonitor

./: CMakeLists.txt  README.md
include/: ISystemMonitor.h  WindowsMonitor.h
src/: WindowsMonitor.cpp  main.cpp
